# websockets-playground

./: README.md
basic/: README.md  pyproject.toml  ws_client.py  ws_server.py
browser-based/: README.md  pyproject.toml  ws_server.py
ws_aiohttp/: README.md
ws_aiohttp/client/: pyproject.toml  ws_client.py
ws_aiohttp/server/: app.py  pyproject.toml
