[tool.poetry]
name = "browser-based"
version = "0.1.0"
description = ""
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
